# behavioral-model

./: compile_targets.sh  v1model.p4
include/bm/bm_sim/: queueing.h
targets/: Makefile.am
targets/simple_switch/: simple_switch.h  sswitch_commands.py  sswitch_onecmd.py
targets/simple_switch_grpc/: Makefile.am  main.cpp
targets/simple_switch_rl_sp_drr/: simple_switch.cpp  simple_switch.h
targets/simple_switch_rl_sp_drr/thrift/: simple_switch.thrift
targets/simple_switch_rl_sp_drr_orig/: simple_switch.cpp  simple_switch.h  sswitch_CLI.py  sswitch_commands.py
targets/simple_switch_sp/: simple_switch.h
targets/simple_switch_sp_bytes/: simple_switch.cpp  simple_switch.h
targets/simple_switch_sp_bytes/thrift/src/: SimpleSwitch_server.cpp
targets/simple_switch_sp_bytes_aq/: simple_switch.h
targets/simple_switch_sp_bytes_aq_dp_rate/: simple_switch.cpp  simple_switch.h  sswitch_CLI.py
targets/simple_switch_sp_bytes_aq_dp_rate/thrift/: simple_switch.thrift
targets/simple_switch_sp_bytes_dp_rate/: simple_switch.h  sswitch_commands.py  sswitch_onecmd
targets/simple_switch_sp_bytes_dp_rate/thrift/src/: SimpleSwitch_server.cpp
